--- a/edd-cli/package.json
+++ b/edd-cli/package.json
@@ -24,7 +24,7 @@
     "connect-restreamer": "^1.0.2",
     "cors": "^2.7.1",
     "dotenv": "^1.1.0",
-    "ember-cli": "0.2.6",
+    "ember-cli": "0.2.7",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^5.0.0",
     "ember-cli-content-security-policy": "0.4.0",
@@ -35,11 +35,11 @@
     "ember-cli-qunit": "0.3.13",
     "ember-cli-redis-proxy": "^0.2.0",
     "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.0.0-beta.18",
+    "ember-data": "1.13.4",
     "ember-deploy-redis": "0.0.3",
     "ember-deploy-s3": "0.0.4",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "liquid-fire": "0.19.4"
+    "liquid-fire": "0.20.4"
   }
 }
