--- a/edd-cli/package.json
+++ b/edd-cli/package.json
@@ -24,22 +24,26 @@
     "connect-restreamer": "^1.0.2",
     "cors": "^2.7.1",
     "dotenv": "^1.1.0",
-    "ember-cli": "0.2.7",
-    "ember-cli-app-version": "0.3.3",
+    "ember-cli": "1.13.7",
+    "ember-cli-app-version": "0.4.0",
     "ember-cli-babel": "^5.0.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-deploy": "^0.4.1",
-    "ember-cli-htmlbars": "0.7.6",
-    "ember-cli-ic-ajax": "0.1.1",
-    "ember-cli-qunit": "0.3.13",
     "ember-cli-redis-proxy": "^0.2.0",
+    "ember-cli-htmlbars": "0.7.9",
+    "ember-cli-htmlbars-inline-precompile": "^0.1.1",
+    "ember-cli-ic-ajax": "0.2.1",
+    "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-qunit": "0.3.20",
+    "ember-cli-release": "0.2.3",
+    "ember-cli-sri": "^1.0.1",
     "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.13.4",
-    "ember-deploy-redis": "0.0.3",
+    "ember-deploy-redis": "0.0.6",
     "ember-deploy-s3": "0.0.4",
+    "ember-data": "1.13.7",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.2",
-    "liquid-fire": "0.20.4"
+    "liquid-fire": "0.20.4",
+    "ember-export-application-global": "^1.0.3"
   }
 }
