--- a/edd-cli/package.json
+++ b/edd-cli/package.json
@@ -8,8 +8,8 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "ember server",
     "build": "ember build",
+    "start": "ember server",
     "test": "ember test"
   },
   "repository": "",
@@ -19,28 +19,34 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "2.0.6",
-    "broccoli-sass": "^0.6.6",
+    "broccoli-asset-rev": "^2.0.6",
+    "broccoli-sass": "^0.7.0",
     "dotenv": "^1.1.0",
     "ember-cli": "1.13.8",
-    "ember-cli-app-version": "0.4.0",
-    "ember-cli-babel": "^5.0.0",
+    "ember-cli-app-version": "^1.0.0",
+    "ember-cli-babel": "^5.1.5",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.0.0",
-    "ember-cli-deploy": "0.5.0-beta.4",
-    "ember-cli-deploy-lightning-pack": "0.2.0",
-    "ember-cli-deploy-ssh-tunnel": "0.2.0",
-    "ember-cli-htmlbars": "0.7.9",
-    "ember-cli-htmlbars-inline-precompile": "^0.1.1",
-    "ember-cli-ic-ajax": "0.2.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.20",
-    "ember-cli-release": "0.2.3",
-    "ember-cli-sri": "^1.0.1",
-    "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.13.7",
-    "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3",
+    "ember-cli-dependency-checker": "^1.1.0",
+    "ember-cli-deploy": "0.5.1",
+    "ember-cli-deploy-build": "0.1.0",
+    "ember-cli-deploy-display-revisions": "0.1.0",
+    "ember-cli-deploy-gzip": "0.1.0",
+    "ember-cli-deploy-manifest": "0.1.0",
+    "ember-cli-deploy-redis": "0.1.1",
+    "ember-cli-deploy-revision-data": "0.1.0",
+    "ember-cli-deploy-s3": "0.2.0",
+    "ember-cli-deploy-ssh-tunnel": "0.2.1",
+    "ember-cli-htmlbars": "^1.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "ember-cli-ic-ajax": "0.2.4",
+    "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-qunit": "^1.0.4",
+    "ember-cli-release": "0.2.8",
+    "ember-cli-sri": "^1.2.0",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-data": "1.13.15",
+    "ember-disable-proxy-controllers": "^1.0.1",
+    "ember-export-application-global": "^1.0.4",
     "liquid-fire": "0.21.2"
   }
 }
