--- a/edd-cli/package.json
+++ b/edd-cli/package.json
@@ -2,51 +2,43 @@
   "name": "edd-cli",
   "version": "0.0.0",
   "description": "Small description for edd-cli goes here",
-  "private": true,
+  "license": "MIT",
+  "author": "",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
+  "repository": "",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
     "test": "ember test"
   },
-  "repository": "",
-  "engines": {
-    "node": ">= 0.10.0"
-  },
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.6",
-    "broccoli-sass": "^0.7.0",
-    "dotenv": "^1.1.0",
-    "ember-cli": "1.13.8",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-babel": "^5.1.5",
-    "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.1.0",
-    "ember-cli-deploy": "0.5.1",
-    "ember-cli-deploy-build": "0.1.0",
-    "ember-cli-deploy-display-revisions": "0.1.0",
-    "ember-cli-deploy-gzip": "0.1.0",
-    "ember-cli-deploy-manifest": "0.1.0",
-    "ember-cli-deploy-redis": "0.1.1",
-    "ember-cli-deploy-revision-data": "0.1.0",
-    "ember-cli-deploy-s3": "0.2.0",
-    "ember-cli-deploy-ssh-tunnel": "0.2.1",
-    "ember-cli-htmlbars": "^1.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-ic-ajax": "0.2.4",
-    "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.0.4",
-    "ember-cli-release": "0.2.8",
-    "ember-cli-sri": "^1.2.0",
+    "broccoli-asset-rev": "^2.4.5",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "2.13.2",
+    "ember-cli-app-version": "^3.0.0",
+    "ember-cli-babel": "^6.0.0",
+    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-eslint": "^3.0.0",
+    "ember-cli-htmlbars": "^1.1.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.0",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-qunit": "^4.0.0",
+    "ember-cli-shims": "^1.1.0",
+    "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "1.13.15",
-    "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.4",
-    "liquid-fire": "0.21.2"
-  }
+    "ember-data": "^2.13.0",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~2.13.0",
+    "ember-welcome-page": "^3.0.0",
+    "loader.js": "^4.2.3"
+  },
+  "engines": {
+    "node": ">= 4"
+  },
+  "private": true
 }
