--- a/edd-cli/package.json
+++ b/edd-cli/package.json
@@ -21,6 +21,9 @@
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.0.0",
     "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-deploy": "^1.0.1",
+    "ember-cli-deploy-display-revisions": "^1.0.0",
+    "ember-cli-deploy-lightning-pack": "^1.1.1",
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.4.0",
