--- a/edd-cli/package.json
+++ b/edd-cli/package.json
@@ -16,10 +16,12 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "dotenv": "^4.0.0",
     "ember-ajax": "^3.0.0",
     "ember-cli": "2.13.2",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.0.0",
+    "ember-cli-bourbon": "^1.2.2",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-deploy": "^1.0.1",
     "ember-cli-deploy-display-revisions": "^1.0.0",
@@ -29,6 +31,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.4.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
+    "ember-cli-sass": "^6.2.0",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
@@ -37,8 +40,9 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.13.0",
-    "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "liquid-fire": "^0.27.3",
+    "loader.js": "^4.2.3",
+    "sass-material-colors": "0.0.5"
   },
   "engines": {
     "node": ">= 4"
